# ML_stock_prediction_project

./: .gitignore  LICENSE  README.md  Test_more.ipynb  pyproject.toml  render.yaml  test_queries_to_bot.txt
app_testing_files/: Test_some_stuff.ipynb  test.txt  test_upload.txt
bot_tg/: DockerfileBot  main.py
notebook_experimentation/: IMOEX_60_additional_features.csv  Проект_концепт.ipynb
notebook_experimentation/.ipynb_checkpoints/: Проект_концепт-checkpoint.ipynb
notebook_experimentation/Data/: MOEX_IMOEX, 1D (2).csv  MOEX_IMOEX, 240.csv  MOEX_IMOEX, 60 (3).csv  MOEX_IMOEX, 60 (4).csv
notebook_experimentation/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebook_experimentation/catboost_info/learn/: events.out.tfevents
notebook_experimentation/catboost_info/test/: events.out.tfevents
service/: DockerfileAPI  main.py
service/utilities/: dl_models.py  generate_features.py  get_data.py  get_models.py  predict_validate.py  train_model.py
